--- a/index.html
+++ b/index.html
@@ -12,15 +12,17 @@
 <body>
 
     <div class="center">
-        <h2>KnockME</h2>
+        <img src="image/logo.png" alt="logo" class="logo">
         <p>A realtime chat web app for DIU students.</p>
-        <div class="fb-login-button" 
+        <div onclick="checkLoginState()" 
+            class="fb-login-button" 
             data-width="" 
             data-size="large" 
             data-button-type="continue_with" 
             data-layout="default" 
             data-auto-logout-link="false" 
-            data-use-continue-as="false">
+            data-use-continue-as="false"
+            >
         </div>
     </div>
 
