--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="center">
         <img src="image/logo.png" alt="logo" class="logo">
         <p>A realtime chat web app for DIU students.</p>
-        <div onclick="checkLoginState()" 
+        <div 
             class="fb-login-button" 
             data-width="" 
             data-size="large" 
