--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <script src="script/login.js"></script>
 
     <div class="center">
         <img src="image/logo.png" alt="logo" class="logo">
@@ -25,12 +26,7 @@
             >
         </div>
     </div>
-
-
-
-    <script src="https://connect.facebook.net/en_US/sdk.js"></script>
-
-    <script src="script/login.js"></script>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
 </body>
 
 </html>
