--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
             >
         </div>
     </div>
-    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
+
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v15.0&appId=660377585299971&autoLogAppEvents=1" nonce="AQkJEUOD"></script>
+
 </body>
 
 </html>
