--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <script src="script/login.js"></script>
+
 
     <div class="center">
         <img src="image/logo.png" alt="logo" class="logo">
@@ -26,8 +26,10 @@
             >
         </div>
     </div>
-
-    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v15.0&appId=660377585299971&autoLogAppEvents=1" nonce="AQkJEUOD"></script>
+    
+    <script src="script/login.js"></script>
+    <!-- <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v15.0&appId=660377585299971&autoLogAppEvents=1" nonce="AQkJEUOD"></script> -->
+    <script src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v15.0&appId=660377585299971&autoLogAppEvents=1" nonce="AQkJEUOD"></script>
 
 </body>
 
