--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/login.css">
-    <script src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v15.0&appId=660377585299971&autoLogAppEvents=1" nonce="AQkJEUOD"></script>
+    <script src="https://connect.facebook.net/en_US/sdk.js"></script>
 
 </head>
 
