--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="center">
         <img src="image/logo.png" alt="logo" class="logo">
-        <p>A realtime chat web app for DIU students.</p>
+        <p class="info">A realtime chat web app for DIU students.</p>
         <div 
             class="fb-login-button" 
             data-width="" 
@@ -28,8 +28,8 @@
             onlogin="checkLoginState()"
             >
         </div>
-        <div id="status">
-        </div>
+        <p id="status">
+        </p>
 
     </div>
     
