--- a/html/chat_page.htm
+++ b/html/chat_page.htm
@@ -19,18 +19,18 @@
     <header class="nav">
         <div class="userProfile placeNm" onclick="profile()">
             <img src="../image/dp.png" alt="" class="profilePic">
-            <p class="userName">Mahdi</p>
+            <p class="userName"></p>
         </div>
         <!-- <hr size="2" width="100%" color="a"> -->
         <div class="tab placeNm" id="bonomaya">
             <img src="../image/bonomaya.jpg" alt="" class="placePic">
             <p class="pName">Bonomaya</p>
         </div>
-        <div class="tab placeNm" onclick="changeTab('foodcourt')">
+        <div class="tab placeNm" id="foodcourt">
             <img src="../image/food_court.jpg" alt="" class="placePic">
             <p class="pName">Food Court</p>
         </div>
-        <div class="tab placeNm" onclick="changeTab('library')">
+        <div class="tab placeNm" id="library"">
             <img src="../image/library.jpg" alt="" class="placePic">
             <p class="pName">Library</p>
         </div>
@@ -41,8 +41,8 @@
         <section class="msgView">
             <div class="topInfo">
                 <div class="placeNm">
-                    <img src="../image/dp.png" alt="" class="pPicInner">
-                    <p class="pNameInner">Library</p>
+                    <img src="#" alt="" class="pPicInner">
+                    <p class="pNameInner"></p>
                 </div>
                 <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
 
