--- a/html/chat_page.htm
+++ b/html/chat_page.htm
@@ -17,7 +17,7 @@
 <body >
 
     <header class="nav">
-        <div class="userProfile placeNm" onclick="profile()">
+        <div class="userProfile" onclick="profile()">
             <img src="../image/dp.png" alt="" class="profilePic">
             <p class="userName"></p>
         </div>
