--- a/html/chat_page.htm
+++ b/html/chat_page.htm
@@ -50,7 +50,7 @@
         </div>
         <div class="tab placeNm" id="other"">
             <img src="../image/other.jpg" alt="" class="placePic">
-            <p class="pName">Random Persons</p>
+            <p class="pName">Random Peoples</p>
         </div>
         
     </nav>
