--- a/html/chat_page.htm
+++ b/html/chat_page.htm
@@ -30,7 +30,7 @@
         
     </header>
     <nav class="nav">
-        <div class="userProfile" onclick="profile()">
+        <div class="userProfile">
             <img src="../image/dp.png" alt="" class="profilePic">
             <p class="userName"></p>
         </div>
@@ -49,7 +49,7 @@
         </div>
         <div class="tab placeNm" id="other"">
             <img src="../image/other.jpg" alt="" class="placePic">
-            <p class="pName">Random Peoples</p>
+            <p class="pName">Globe Chat</p>
         </div>
         
     </nav>
