--- a/html/chat_page.htm
+++ b/html/chat_page.htm
@@ -30,29 +30,32 @@
         
     </header>
     <nav class="nav">
-        <div class="userProfile">
-            <img src="../image/dp.png" alt="" class="profilePic">
-            <p class="userName"></p>
+        <div class="navInner">
+            <div class="userProfile">
+                <img src="../image/dp.png" alt="" class="profilePic">
+                <p class="userName"></p>
+            </div>
+            <!-- <hr size="2" width="100%" color="a"> -->
+            <div class="tab placeNm" id="bonomaya">
+                <img src="../image/bonomaya.jpg" alt="" class="placePic">
+                <p class="pName">Bonomaya</p>
+            </div>
+            <div class="tab placeNm" id="foodcourt">
+                <img src="../image/food_court.jpg" alt="" class="placePic">
+                <p class="pName">Food Court</p>
+            </div>
+            <div class="tab placeNm" id="library"">
+                <img src="../image/library.jpg" alt="" class="placePic">
+                <p class="pName">Library</p>
+            </div>
+            <div class="tab placeNm" id="other"">
+                <img src="../image/other.jpg" alt="" class="placePic">
+                <p class="pName">Globe Chat</p>
+            </div>
         </div>
-        <!-- <hr size="2" width="100%" color="a"> -->
-        <div class="tab placeNm" id="bonomaya">
-            <img src="../image/bonomaya.jpg" alt="" class="placePic">
-            <p class="pName">Bonomaya</p>
-        </div>
-        <div class="tab placeNm" id="foodcourt">
-            <img src="../image/food_court.jpg" alt="" class="placePic">
-            <p class="pName">Food Court</p>
-        </div>
-        <div class="tab placeNm" id="library"">
-            <img src="../image/library.jpg" alt="" class="placePic">
-            <p class="pName">Library</p>
-        </div>
-        <div class="tab placeNm" id="other"">
-            <img src="../image/other.jpg" alt="" class="placePic">
-            <p class="pName">Globe Chat</p>
-        </div>
-        
+        <p class="usr">Users: <span class="usrCnt">&nbsp;&nbsp;</span></p>
     </nav>
+
     <div class="container">
 
         <section class="msgView">
