--- a/html/chat_page.htm
+++ b/html/chat_page.htm
@@ -25,6 +25,7 @@
         <a href="#">
             <img src="../image/logo.png" alt="KnockME" class="KnockME">
         </a>
+        <!-- <p class="greetingNm">DIU Place Wise Group Chat App </p> -->
         <button class="material-symbols-outlined logoutBtn" style="font-size:30px;color:rgb(224, 224, 224);">logout</button>
 
         
@@ -36,6 +37,7 @@
                 <p class="userName"></p>
             </div>
             <!-- <hr size="2" width="100%" color="a"> -->
+            <p class="part nm">Places in Daffodil</p>
             <div class="tab placeNm" id="bonomaya">
                 <img src="../image/bonomaya.jpg" alt="" class="placePic">
                 <p class="pName">Bonomaya</p>
@@ -48,6 +50,8 @@
                 <img src="../image/library.jpg" alt="" class="placePic">
                 <p class="pName">Library</p>
             </div>
+            <p class="part nm">For Outsider</p>
+
             <div class="tab placeNm" id="other"">
                 <img src="../image/other.jpg" alt="" class="placePic">
                 <p class="pName">Globe Chat</p>
