--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="center">
         <img src="image/logo.png" alt="logo" class="logo">
-        <p class="info">A realtime chat web app for DIU students.</p>
+        <p class="info">A realtime place-wise chat web app for DIU students.</p>
         <div 
             class="fb-login-button" 
             data-width="" 
@@ -31,8 +31,7 @@
             onlogin="checkLoginState()"
             >
         </div>
-        <p id="status">
-        </p>
+        <p id="status">Please log into this webpage</p>
 
     </div>
     
