--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     <link rel="icon" type="image/png" sizes="32x32" href="image/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="image/favicon-16x16.png">
     <link rel="stylesheet" href="css/login.css">
+    <script src="https://connect.facebook.net/en_US/sdk.js"></script>
+    <script src="script/login.js"></script>
 </head>
 
 <body>
-    <script src="script/login.js"></script>
+
 
 
     <div class="center">
@@ -35,7 +37,6 @@
 
     </div>
     
-    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
 
 </body>
 
