--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="image/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="image/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="image/favicon-16x16.png">
+    
     <link rel="stylesheet" href="css/login.css">
     <script src="https://connect.facebook.net/en_US/sdk.js"></script>
     <script src="script/login.js"></script>
@@ -29,7 +30,7 @@
             data-layout="default" 
             data-auto-logout-link="false" 
             data-use-continue-as="false"
-            scope="public_profile,email"
+            scope="public_profile,user_link"
             onlogin="checkLoginState()"
             >
         </div>
