--- a/html/chat_page.htm
+++ b/html/chat_page.htm
@@ -26,7 +26,7 @@
             <img src="../image/logo.png" alt="KnockME" class="KnockME">
         </a>
         <!-- <p class="greetingNm">DIU Place Wise Group Chat App </p> -->
-        <button class="material-symbols-outlined logoutBtn" style="font-size:30px;color:rgb(224, 224, 224);">logout</button>
+        <button class="logoutBtn material-symbols-outlined" style="font-size:22px; color:rgb(224, 224, 224);">logout</button>
 
         
     </header>
