--- a/html/chat_page.htm
+++ b/html/chat_page.htm
@@ -60,8 +60,13 @@
         <p class="usr">Users: <span class="usrCnt">&nbsp;&nbsp;</span></p>
     </nav>
 
-    <div class="container">
+    <div class="startMsg">
+        <div class="center">
+            <p>Please Select a Conversation To start chatting.</p>
+        </div>
+    </div>
 
+    <div class="container">
         <section class="msgView">
             <div class="topInfo">
                 <div class="placeNm">
@@ -98,6 +103,7 @@
         </section>
         
     </div>
+
     
     <script type="module" src="../script/chat_page.js"></script>
     <!-- <script type="module" src="../script/firebase_module.js"></script> -->
