--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 
     <div class="center">
         <img src="image/logo.png" alt="logo" class="logo">
-        <p class="info">A realtime place-wise chat web app for DIU students.</p>
+        <!-- <p class="info">A realtime place-wise chat web app for DIU students.</p> -->
+        <p class="info">A web app for chating by Yamin Mahdi.</p>
         <div 
             class="fb-login-button" 
             data-width="" 
