--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
         </div>
         <p id="status">Please log into this webpage</p>
 
+        <p class="copyright">Copyright (C) 2022 Yamin Mahdi</p>
     </div>
+
     
 
 </body>
