--- a/index.html
+++ b/index.html
@@ -5,11 +5,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- <meta property="al:android:url" content="sharesample://story/1234"> -->
+    <meta property="al:android:package" content="com.mlab.knockme">
+    <meta property="al:android:app_name" content="KnockME">
+    <meta property="og:title" content="KnockME" />
+    <meta property="og:type" content="website" />
+    <meta property="al:web:should_fallback" content="false" />
+
+    <script type='text/javascript'>
+        $('head').append('<meta property="al:android:target_url" content="'+location.href+'">');
+    </script>
+
+
     <title>KnockME - Login</title>
     <link rel="apple-touch-icon" sizes="180x180" href="image/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="image/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="image/favicon-16x16.png">
-    
+
     <link rel="stylesheet" href="css/login.css">
     <script src="https://connect.facebook.net/en_US/sdk.js"></script>
     <script src="script/login.js"></script>
@@ -23,24 +36,16 @@
         <img src="image/logo.png" alt="logo" class="logo">
         <!-- <p class="info">A realtime place-wise chat web app for DIU students.</p> -->
         <p class="info">A web app for chating by Yamin Mahdi.</p>
-        <div 
-            class="fb-login-button" 
-            data-width="" 
-            data-size="large" 
-            data-button-type="continue_with" 
-            data-layout="default" 
-            data-auto-logout-link="false" 
-            data-use-continue-as="false"
-            scope="public_profile,user_link"
-            onlogin="checkLoginState()"
-            >
+        <div class="fb-login-button" data-width="" data-size="large" data-button-type="continue_with"
+            data-layout="default" data-auto-logout-link="false" data-use-continue-as="false"
+            scope="public_profile,user_link" onlogin="checkLoginState()">
         </div>
         <p id="status">Please log into this webpage</p>
 
         <p class="copyright">Copyright (C) 2022 Yamin Mahdi</p>
     </div>
 
-    
+
 
 </body>
 
