--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta property="al:android:target_url" content="http://x.com">
-    <!-- <meta property="al:android:url" content="sharesample://story/1234"> -->
+    <meta property="al:android:url" content="knockme://story/1234">
     <meta property="al:android:package" content="com.mlab.knockme">
     <meta property="al:android:app_name" content="KnockME">
     <meta property="og:title" content="KnockME" />
