--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta property="og:type" content="website" />
     <meta property="al:web:should_fallback" content="false" />
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type='text/javascript'>
         $('head').append('<meta property="al:android:target_url" content="'+location.href+'"/>');
     </script>
